fixed the z-index progress issue, finally

--- a/src/components/Application/application.scss
+++ b/src/components/Application/application.scss
@@ -137,7 +137,9 @@ main {
 
 	.button-container {
 		display: block;
+        z-index: 1000;
 		margin: 30px auto 0;
+        transform: translateZ(10px);
 	}
 
 	.button-group {
@@ -424,6 +426,7 @@ main {
 	bottom: 20px;
 	left: 5%;
 	background: $midnight;
+    z-index: -1;
 }
 
 #progress {
@@ -431,4 +434,5 @@ main {
 	height: 100%;
 	background: $shamrock;
 	transition-duration: 3s;
+    z-index: -1;
 }
